src/test/compile-fail/log-type-error.rs
// error-pattern: unimplemented logging type

fn main() {
  log main;
}

